# ABNAMRO_AISO_AURORA

./: .dockerignore  .gitignore  Dockerfile.railway  README.md  pyproject.toml  railway.toml
aurora_tool_server/: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  README.md  pyproject.toml
aurora_tool_server/assets/prompts/: evaluation_system.txt  generation_system.txt
aurora_tool_server/assets/rag/: corpus_en_structure.json  corpus_nl_structure.json  insights_stijlgids_en_tree.json  insights_stijlgids_nl_tree.json  vector_corpus_en.jsonl  vector_corpus_nl.jsonl  vector_insights_stijlgids_en.jsonl  vector_insights_stijlgids_nl.jsonl  vector_schrijfwijzer.jsonl  vector_writing_guide.jsonl
aurora_tool_server/aurora_tool_server/: __init__.py  api.py  audit_log.py  core.py  env.py  evaluation.py  generation.py  intent.py  mcp_server.py  paths.py  profiles.py  refinement.py  retrieval.py  schemas.py  workshop_log.py
aurora_tool_server/aurora_tool_server/evaluation/: __init__.py  catalogue.py  indicators.py  inputs.py  prompt.py  service.py  tier1_deterministic.py  tier2_judges.py  (+1 more)
aurora_tool_server/deploy/: start.sh
aurora_tool_server/docs/: DUTCH_SUPPORT.md  EVALUATION.md
aurora_tool_server/frontend/: __init__.py  agent_service.py  agent_tools.py  api_client.py  app.py  branding.py  chat.py  normal_mode.py  settings_state.py
aurora_tool_server/scripts/: build_rag_assets.py
aurora_tool_server/tests/: eval_fixtures.py  test_agent_service.py  test_agent_tools.py  test_api.py  test_core.py  test_dutch_support.py  test_evaluation_service.py  test_evaluation_tier1.py  test_evaluation_tier2.py  test_frontend_api_client.py  test_generation.py  test_mcp.py  test_normal_mode.py  test_profiles_crud.py
(+2831 files in other folders)
