[project]
name = "aurora-tool-server"
version = "0.1.0"
description = "Standalone AURORA REST and MCP tool server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "mcp>=1.16.0",
    "openai>=1.0.0",
    "openai-agents>=0.17.4",
    "pydantic>=2.8.0",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.0",
    "streamlit>=1.40.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.0",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["aurora_tool_server"]
